--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "grunt-bower-task": "~0.3.4",
  		"grunt-cli": "~0.1.11",
         "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-compass": "~0.7.0",
         "grunt-contrib-copy": "~0.4.1",
  		"grunt-contrib-jshint": "~0.7.2",
         "grunt-contrib-requirejs" : "~0.4.1",
