--- a/bower.json
+++ b/bower.json
@@ -20,5 +20,8 @@
         "jquery": ">=2.0"
     },
     "devDependencies": {
+        "blanket": "~1.1.5",
+        "chai": "~1.9.1",
+        "mocha": "~1.20.1"
     }
 }
