--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "grunt-contrib-jshint": "~0.10.0",
         "grunt-contrib-requirejs" : "~0.4.4",
         "grunt-contrib-watch": "~0.6.1",
-        "load-grunt-tasks": "~0.5.0"
+        "load-grunt-tasks": "~0.5.0",
+        "sinon": "~1.10.2"
       },
       "scripts": {
         "build": "npm install && grunt",
