--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         "grunt-contrib-jshint": "~0.10.0",
         "grunt-contrib-requirejs" : "~0.4.4",
         "grunt-contrib-watch": "~0.6.1",
-        "load-grunt-tasks": "~0.5.0",
-        "sinon": "~1.10.2"
+        "load-grunt-tasks": "~0.5.0"
       },
       "scripts": {
         "build": "npm install && grunt",
