--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "devDependencies": {
         "blanket": "~1.1.5",
         "chai": "~1.9.1",
+        "chai-as-promised": "~4.1.1",
         "mocha": "~1.20.1",
         "sinon": "~1.10.2"
     }
