Config: added after, afterEach, before and beforeEach as predefined symbols for test files in JSHint configuration.

--- a/test/specs/.jshintrc
+++ b/test/specs/.jshintrc
@@ -20,6 +20,10 @@
         "describe",
         "expect",
         "it",
+        "after",
+        "afterEach",
+        "before",
+        "beforeEach",
         "sinon",
 
         "getUrlParam",
