--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "appcore",
+    "name": "ampedjs",
     "author": "Alvin Teh <alvin.teh@outlook.com>",
     "description": "A JavaScript MV* framework for modern web apps.",
     "license": "mit",
     "version": "0.0.1",
     "repository": {
         "type": "git",
-        "url": "https://github.com/alvinteh/appcore.git"
+        "url": "https://github.com/alvinteh/ampedjs.git"
       },
     "dependencies": {
     },
