--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,6 @@
         "chai": "~1.9.1",
         "chai-as-promised": "~4.1.1",
         "mocha": "~1.20.1",
-        "sinon": "~1.10.2"
+        "sinon": "http://sinonjs.org/releases/sinon-1.10.3.js"
     }
 }
