--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
         "blanket": "~1.1.5",
         "chai": "~1.9.1",
         "chai-as-promised": "~4.1.1",
+        "jquery": "~2.1.1",
         "mocha": "~1.20.1",
         "sinonjs": "~1.10.2"
     }
