--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
         "chai-as-promised": "~4.1.1",
         "jquery": "~2.1.1",
         "mocha": "~1.20.1",
-        "mutationobserver-shim": "https://github.com/megawac/MutationObserver.js.git",
+        "mutationobserver-shim": "MutationObserver-shim",
         "sinonjs": "~1.10.2"
     }
 }
