Build: temporarily added --force flag to grunt test to bypass PhantomJS timeout issues.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
       "scripts": {
         "build": "npm install && grunt",
         "watch": "grunt watch",
-        "test": "grunt test"
+        "test": "grunt test --force"
     }
 }
