Build: added distribution files and Bower main configuration.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "name": "ampedjs",
     "version": "0.1.0",
+    "main": "dist/ampedjs.min.js",
     "ignore": [
         "**/.*",
         "build",
